RESOLVED FIXED80198
AssociatedURLLoader doesn't support Access-Control-Expose-Headers field in response.
https://bugs.webkit.org/show_bug.cgi?id=80198
Summary AssociatedURLLoader doesn't support Access-Control-Expose-Headers field in re...
Bill Budge
Reported 2012-03-02 15:26:46 PST
The CORS expose header mechanism is broken.
Attachments
Proposed Patch (3.16 KB, patch)
2012-03-02 15:37 PST, Bill Budge
no flags
Bill Budge
Comment 1 2012-03-02 15:37:23 PST
Created attachment 129968 [details] Proposed Patch
Adam Barth
Comment 2 2012-03-02 16:44:15 PST
Comment on attachment 129968 [details] Proposed Patch I wonder if we should have an HTTPHeaderNames.h similar to the one in Chromium to help avoid these sorts of bugs... It might be worth waiting until we see this problem again.
WebKit Review Bot
Comment 3 2012-03-02 18:44:17 PST
Comment on attachment 129968 [details] Proposed Patch Rejecting attachment 129968 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: _by_email return self._reviewer_only(self.account_by_email(email)) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/common/config/committers.py", line 632, in account_by_email return self._email_to_account_map().get(email.lower()) if email else None File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/common/config/committers.py", line 525, in _email_to_account_map assert(email not in self._accounts_by_email) # We should never have duplicate emails. AssertionError Full output: http://queues.webkit.org/results/11796250
WebKit Review Bot
Comment 4 2012-03-03 10:50:06 PST
Comment on attachment 129968 [details] Proposed Patch Clearing flags on attachment: 129968 Committed r109661: <http://trac.webkit.org/changeset/109661>
WebKit Review Bot
Comment 5 2012-03-03 10:50:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.