Fixes AssociatedURLLoader support for Access-Control-Expose-Headers field in response. https://bugs.webkit.org/show_bug.cgi?id=80198

Reviewed by Adam Barth.

* src/AssociatedURLLoader.cpp:
* tests/AssociatedURLLoaderTest.cpp:


Canonical link: https://commits.webkit.org/97331@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109661 268f45cc-cd09-0410-ab3c-d52691b4dbfc